RESOLVED FIXED177826
REGRESSION(High Sierra): Layout Test fast/multicol/newmulticol/spanner2.html is a flaky image failure on WK1
https://bugs.webkit.org/show_bug.cgi?id=177826
Summary REGRESSION(High Sierra): Layout Test fast/multicol/newmulticol/spanner2.html ...
Matt Lewis
Reported 2017-10-03 11:38:03 PDT
Attachments
Patch (2.21 KB, patch)
2017-11-28 18:23 PST, Tim Horton
no flags
Patch (2.41 KB, patch)
2017-11-28 18:24 PST, Tim Horton
no flags
Patch (3.88 KB, patch)
2017-11-28 18:31 PST, Tim Horton
no flags
Patch (3.17 KB, patch)
2017-11-28 18:31 PST, Tim Horton
no flags
Patch (3.88 KB, patch)
2017-11-28 18:32 PST, Tim Horton
no flags
Alexey Proskuryakov
Comment 1 2017-10-03 19:50:11 PDT
Does this reproduce when the test is run on its own?
Radar WebKit Bug Importer
Comment 2 2017-10-08 12:36:05 PDT
Matt Lewis
Comment 3 2017-10-09 11:29:26 PDT
I have been unable to get the test to fail locally.
Alexey Proskuryakov
Comment 4 2017-10-09 12:41:59 PDT
This likely means that a preceding test does something that breaks subsequent tests. Can you check if that's the case, and bisect to the culprit if so?
Tim Horton
Comment 5 2017-11-28 18:23:50 PST
Tim Horton
Comment 6 2017-11-28 18:24:48 PST
Tim Horton
Comment 7 2017-11-28 18:31:16 PST
Tim Horton
Comment 8 2017-11-28 18:31:25 PST
Tim Horton
Comment 9 2017-11-28 18:32:03 PST
Alexey Proskuryakov
Comment 10 2017-11-28 18:37:40 PST
Comment on attachment 327818 [details] Patch r=me, please wait for green EWS. Thank you!
Alexey Proskuryakov
Comment 11 2017-11-28 18:38:27 PST
*** Bug 177628 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 12 2017-11-28 18:38:33 PST
*** Bug 177623 has been marked as a duplicate of this bug. ***
WebKit Commit Bot
Comment 13 2017-11-28 18:59:51 PST
Comment on attachment 327818 [details] Patch Clearing flags on attachment: 327818 Committed r225254: <https://trac.webkit.org/changeset/225254>
WebKit Commit Bot
Comment 14 2017-11-28 18:59:53 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.