REGRESSION (High Sierra): Layout Test fast/multicol/newmulticol/spanner2.html is a flaky image failure on WK1 https://bugs.webkit.org/show_bug.cgi?id=177826 <rdar://problem/34876498>

Reviewed by Alexey Proskuryakov.

Source/WebCore:

No new tests, fixes some already-broken tests.

* platform/graphics/mac/PDFDocumentImageMac.mm:
(WebCore::PDFDocumentImage::drawPDFPage):
Save and restore one more piece of context state that
PDFKit mutates while drawing.

Source/WebCore/PAL:

* pal/spi/cg/CoreGraphicsSPI.h:


Canonical link: https://commits.webkit.org/196115@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225254 268f45cc-cd09-0410-ab3c-d52691b4dbfc