Source/WebCore/PAL/pal/spi/cg/CoreGraphicsSPI.h
@@ -245,6 +245,7 @@ CGDataProviderRef CGPDFDocumentGetDataProvider(CGPDFDocumentRef);
 
 CGFontAntialiasingStyle CGContextGetFontAntialiasingStyle(CGContextRef);
 void CGContextSetFontAntialiasingStyle(CGContextRef, CGFontAntialiasingStyle);
+bool CGContextGetAllowsFontSubpixelPositioning(CGContextRef);
 bool CGContextDrawsWithCorrectShadowOffsets(CGContextRef);
 CGPatternRef CGPatternCreateWithImage2(CGImageRef, CGAffineTransform, CGPatternTiling);
 
