Source/WebCore/platform/graphics/mac/PDFDocumentImageMac.mm
@@ -72,9 +72,10 @@ void PDFDocumentImage::drawPDFPage(GraphicsContext& context)
     LocalCurrentGraphicsContext localCurrentContext(context);
 
     // These states can be mutated by PDFKit but are not saved
-    // on the context's state stack. (<rdar://problem/14951759>)
+    // on the context's state stack. (<rdar://problem/14951759&35738181>)
     bool allowsSmoothing = CGContextGetAllowsFontSmoothing(context.platformContext());
     bool allowsSubpixelQuantization = CGContextGetAllowsFontSubpixelQuantization(context.platformContext());
+    bool allowsSubpixelPositioning = CGContextGetAllowsFontSubpixelPositioning(context.platformContext());
 
 #pragma clang diagnostic push
 #pragma clang diagnostic ignored "-Wdeprecated-declarations"
@@ -83,6 +84,7 @@ void PDFDocumentImage::drawPDFPage(GraphicsContext& context)
 
     CGContextSetAllowsFontSmoothing(context.platformContext(), allowsSmoothing);
     CGContextSetAllowsFontSubpixelQuantization(context.platformContext(), allowsSubpixelQuantization);
+    CGContextSetAllowsFontSubpixelPositioning(context.platformContext(), allowsSubpixelPositioning);
 }
 
 }
